@@ -5,4 +5,6 @@ lib/Net/Mosso/CloudFiles/Object.pm
 Makefile.PL
 MANIFEST			This list of files
 README
+t/pod.t
+t/pod_coverage.t
 t/simple.t
