@@ -4,6 +4,8 @@ Revision history for Perl module Net::Mosso::CloudFiles:
     - add Crypt::SSLeay as a dependency as we use SSL for all
       requests
     - update documentation
+    - add Pod tests
+    - make request, uri methods private
 
 0.41 Tue Mar 17 14:52:50 GMT 2009
     - fix problem with uploading binary data
